--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -5,6 +5,7 @@
 
 // foundation
 @import "./foundation/variables";
+@import "./foundation/mixin/button";
 
 // component
 @import "./object/component/outline_button";
