--- a/app/frontend/scss/object/component/_outline_button.scss
+++ b/app/frontend/scss/object/component/_outline_button.scss
@@ -1,12 +1,12 @@
-@mixin outline-btn-color-extension($color) {
-  color: $color;
-  border: 2px solid $color;
+// @mixin outline-btn-color-extension($color) {
+//   color: $color;
+//   border: 2px solid $color;
 
-  &:hover {
-    background: $color;
-    color: white;
-  }
-}
+//   &:hover {
+//     background: $color;
+//     color: white;
+//   }
+// }
 
 .c-outline-btn {
   display: inline-block;
@@ -21,5 +21,9 @@
     &--#{$key} {
       @include outline-btn-color-extension(($color));
     }
+  }
+
+  &--block {
+    @include btn-block();
   }
 }
