--- a/app/views/shared/session/_email_field.slim
+++ b/app/views/shared/session/_email_field.slim
@@ -1,6 +1,5 @@
-.input-group
-  = f.label value, class: 'sr-only'
-  .input-group-prepend: .input-group-text: i.far.fa-fw.fa-envelope
-  = f.email_field value, placeholder: placeholder, class: 'form-control'
+.c-text-field
+  = f.email_field value, placeholder: placeholder, class: 'c-text-field__input-form'
+  .c-text-field__icon: i.far.fa-envelope.fa-fw.fa-lg
 - unless notes.nil?
   small.text-muted = notes
