--- a/app/views/shared/session/_input_field.slim
+++ b/app/views/shared/session/_input_field.slim
@@ -1,6 +1,9 @@
-.input-group
+/ .input-group
   = f.label value, class: 'sr-only'
   .input-group-prepend: .input-group-text: i class=icon
   = f.text_field value, placeholder: placeholder, class: 'form-control'
+.c-text-field
+  = f.text_field value, placeholder: placeholder, class: 'c-text-field__input-form'
+  .c-text-field__icon: i class=icon
 - unless notes.nil?
   small.text-muted = notes
