--- a/app/views/shared/session/_password_field.slim
+++ b/app/views/shared/session/_password_field.slim
@@ -1,6 +1,9 @@
-.input-group
+/ .input-group
   = f.label value, class: 'sr-only'
   .input-group-prepend: .input-group-text: i.fas.fa-fw.fa-key
   = f.password_field value, placeholder: placeholder, class: 'form-control'
+.c-text-field
+  = f.password_field value, placeholder: placeholder, class: 'c-text-field__input-form'
+  .c-text-field__icon: i.fas.fa-key.fa-fw.fa-lg
 - unless notes.nil?
   small.text-muted = notes
