--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -8,6 +8,9 @@
 @import "./foundation/variables";
 @import "./foundation/mixin/button";
 
+// layout
+@import "./layout/footer";
+
 // component
 @import "./object/component/button";
 @import "./object/component/link";
@@ -17,6 +20,7 @@
 
 // project
 @import "./object/project/comment_item";
+@import "./object/project/footer";
 
 // utility
 @import "./object/utility/spacer";
