--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -1,3 +1,6 @@
+// サイズ
+$global_page_width: 1200px;
+
 // カラー
 $background_color: #F9ED69;
 $main_color: #F08A5D;
@@ -7,6 +10,7 @@ $main_dark_tone_color: #B1552C;
 $primary_color: #518CFC;
 $danger_color: #DC3445;
 $supplement_color: #939393;
+$white_color: white;
 
 $header_color: $main_color;
 $footer_color: $main_color;
@@ -20,7 +24,10 @@ $custom_colors: (bg: $background_color,
   dark-tone: $main_dark_tone_color,
   primary: $primary_color,
   danger: $danger_color,
-  supplement: $supplement_color);
+  supplement: $supplement_color,
+  white: $white_color);
+
+// 余白
 
 $spacers: (0: 0,
   1: .25rem,
