--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -11,6 +11,9 @@ $primary_color: #518CFC;
 $danger_color: #DC3445;
 $supplement_color: #939393;
 $white_color: white;
+$gold_color: #DBB400;
+$silver_color: #96A9B3;
+$copper_color: #C47022;
 
 $header_color: $main_color;
 $footer_color: $main_color;
@@ -25,7 +28,10 @@ $custom_colors: (bg: $background_color,
   primary: $primary_color,
   danger: $danger_color,
   supplement: $supplement_color,
-  white: $white_color);
+  white: $white_color,
+  gold: $gold_color,
+  silver: $silver_color,
+  copper: $copper_color);
 
 // 余白
 
