--- a/app/frontend/scss/object/project/_footer.scss
+++ b/app/frontend/scss/object/project/_footer.scss
@@ -2,16 +2,16 @@
   width: $global_page_width;
   margin: 0 auto;
 
-  .p-footer__link-list {
+  &__link-list {
     display: flex;
     margin-bottom: 1rem;
   }
 
-  .p-footer__link-item {
+  &__link-item {
     margin-right: 1rem;
   }
 
-  .p-footer__copyright {
+  &__copyright {
     text-align: center;
     color: $white_color;
   }
