--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -10,6 +10,7 @@
 
 // layout
 @import "./layout/footer";
+@import "./layout/header";
 
 // component
 @import "./object/component/button";
@@ -22,6 +23,7 @@
 // project
 @import "./object/project/comment_item";
 @import "./object/project/footer";
+@import "./object/project/header";
 @import "./object/project/sticky_menu";
 
 // utility
