--- a/app/frontend/scss/foundation/_reset.scss
+++ b/app/frontend/scss/foundation/_reset.scss
@@ -1,3 +1,8 @@
 body {
   font-family: 'Avenir', 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Sans', 'ヒラギノ角ゴシック', YuGothic, 'Yu Gothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic'
 }
+
+p {
+  margin: 0;
+  padding: 0;
+}
