--- a/app/frontend/scss/object/project/_footer.scss
+++ b/app/frontend/scss/object/project/_footer.scss
@@ -4,7 +4,9 @@
 
   &__link-list {
     display: flex;
+    list-style: none;
     margin-bottom: 1rem;
+    padding-left: 0;
   }
 
   &__link-item {
