--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -1,6 +1,8 @@
 // @import 'media/fonts/memoir-round-c63b435d0161341b85dd2b9262eef3ee.otf';
 @import '~bootstrap/scss/bootstrap';
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+@import "ress";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "./actiontext";
 
 // foundation
