--- a/app/frontend/scss/object/component/_button.scss
+++ b/app/frontend/scss/object/component/_button.scss
@@ -1,9 +1,5 @@
 .c-btn {
-  display: inline-block;
-  padding: 0.3em 1em;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: .2s;
+  @include block-btn();
   color: white;
   @include btn-color-extension($main_color);
 
@@ -12,9 +8,5 @@
     &--#{$key} {
       @include btn-color-extension($color);
     }
-  }
-
-  &--block {
-    @include btn-block();
   }
 }
