--- a/app/frontend/scss/foundation/mixin/_button.scss
+++ b/app/frontend/scss/foundation/mixin/_button.scss
@@ -1,3 +1,14 @@
+@mixin block-btn {
+  display: inline-block;
+  padding: 0.3em 1em;
+  border-radius: 5px;
+  transition: .2s;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
 @mixin btn-color-extension($color) {
   background: $color;
 
@@ -14,10 +25,6 @@
 
   &:hover {
     background: $color;
-    color: white;
+    color: transparent;
   }
-}
-
-@mixin btn-block() {
-  display: block;
 }
