--- a/app/frontend/scss/object/component/_outline_button.scss
+++ b/app/frontend/scss/object/component/_outline_button.scss
@@ -1,9 +1,5 @@
 .c-outline-btn {
-  display: inline-block;
-  padding: 0.3em 1em;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: .2s;
+  @include block-btn();
   @include outline-btn-color-extension($main_color);
 
   @each $key,
@@ -11,9 +7,5 @@
     &--#{$key} {
       @include outline-btn-color-extension(($color));
     }
-  }
-
-  &--block {
-    @include btn-block();
   }
 }
