--- a/app/frontend/scss/object/component/_text_field.scss
+++ b/app/frontend/scss/object/component/_text_field.scss
@@ -4,6 +4,7 @@
 
   &__input-form {
     width: 100%;
+    background: white;
     padding: .3em .3em .3em 3em;
     border: 2px solid $general_line_color;
     border-radius: 3px;
@@ -25,6 +26,6 @@
     top: .4em;
     left: .8em;
     transition: 0.2s;
-    color: $general_line_color;
+    color: $supplement_color;
   }
 }
