--- a/app/frontend/scss/object/project/_comment_item.scss
+++ b/app/frontend/scss/object/project/_comment_item.scss
@@ -6,6 +6,7 @@
   &__header {
     display: flex;
     margin-bottom: 1em;
+    align-items: center;
   }
 
   &__icon {
@@ -26,6 +27,7 @@
   &__footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__datetime {
