--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -32,6 +32,7 @@
 @import "./object/project/sticky_menu";
 
 // utility
+@import "./object/utility/float";
 @import "./object/utility/shadow";
 @import "./object/utility/spacer";
 
@@ -39,5 +40,4 @@
 @import "./separator";
 @import "./custom_button";
 @import "./custom_text";
-@import "./custom_card";
 @import "./custom_article_show";
