--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -47,6 +47,7 @@ $footer_color: $main_color;
 $general_line_color: #DDDDDD;
 $white_color: white;
 $black_color: black;
+$float_shadow_color: rgba(0, 0, 0, 0.25);
 
 
 /*===============================
