--- a/app/frontend/scss/object/component/_badge.scss
+++ b/app/frontend/scss/object/component/_badge.scss
@@ -1,7 +1,3 @@
-$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
-@import "~@fortawesome/fontawesome-free/scss/regular";
-@import "~@fortawesome/fontawesome-free/scss/solid";
-
 .c-badge {
   @include block-badge;
   background: $main_color;
@@ -24,7 +20,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
       font-family: "Font Awesome 5 Free";
       font-weight: 900;
       font-size: .1rem;
-      content: "\f111";
+      content: "\f02b";
       padding-right: .2rem;
     }
 
