--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -23,10 +23,13 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "./object/component/badge";
 @import "./object/component/button";
 @import "./object/component/circle_button";
+@import "./object/component/hand_write_button";
 @import "./object/component/link";
 @import "./object/component/outline_button";
 @import "./object/component/text_field";
 @import "./object/component/text";
+@import "./object/component/toy_btn";
+@import "./object/component/user_photo";
 
 // project
 @import "./object/project/article_card";
