--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -10,7 +10,7 @@ header#header.l-header
       ul.p-header__list
         - if logged_in?
           li.p-header__list-item
-            = link_to new_article_path, class: 'c-btn c-btn--dark-tone'
+            = link_to new_article_path, class: 'c-hand-write-btn c-hand-write-btn--dark-tone'
               i.fas.fa-pen.fa-fw
               | 投稿
           li.p-header__list-item
