--- a/app/frontend/scss/object/component/_circle_button.scss
+++ b/app/frontend/scss/object/component/_circle_button.scss
@@ -1,9 +1,5 @@
 .c-circle-btn {
-  display: inline-block;
-  padding: .7em;
-  text-decoration: none;
-  border-radius: 50%;
-  transition: .2s;
+  @include circle-btn();
   color: white;
   @include btn-color-extension($main_color);
 
@@ -12,5 +8,9 @@
     &--#{$key} {
       @include btn-color-extension($color);
     }
+  }
+
+  &--toy {
+    box-shadow: 0 .2em 0px rgba(255, 255, 255, 0.25) inset, 0 -.2em 0px rgba(0, 0, 0, 0.25) inset;
   }
 }
