--- a/app/frontend/scss/object/project/_header.scss
+++ b/app/frontend/scss/object/project/_header.scss
@@ -28,14 +28,12 @@
     }
   }
 
-  &__search-form {
-  }
+  &__search-form {}
 
   &__list {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    list-style: none;
     margin-bottom: 0;
     padding-left: 0;
   }
@@ -64,7 +62,6 @@
     border-radius: 3px;
     background: white;
     right: 10px;
-    list-style: none;
     display: none;
     padding: 1rem;
     margin-bottom: 0;
