--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -8,6 +8,9 @@
         i.fas.fa-comment-dots.fa-fw.fa-spin
       / = link_to '#', class: 'c-circle-btn c-circle-btn--primary'
       /   i.fab.fa-twitter.fa-fw
+      .p-sticky-menu__btn
+        button.c-circle-btn.c-circle-btn--highlight
+          <i class="fas fa-surprise fa-fw"></i>
 
 .card.boarder.text-left.mb-4
   .card-header
