--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -10,10 +10,10 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "./actiontext";
 
 // foundation
-@import "./foundation/reset";
 @import "./foundation/variables";
 @import "./foundation/mixin/badge";
 @import "./foundation/mixin/button";
+@import "./foundation/reset";
 
 // layout
 @import "./layout/footer";
@@ -22,6 +22,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 // component
 @import "./object/component/badge";
 @import "./object/component/button";
+@import "./object/component/checkbox";
 @import "./object/component/circle_button";
 @import "./object/component/hand_write_button";
 @import "./object/component/link";
@@ -36,6 +37,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "./object/project/comment_item";
 @import "./object/project/footer";
 @import "./object/project/header";
+@import "./object/project/session_form";
 @import "./object/project/sticky_menu";
 
 // utility
