--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -26,6 +26,7 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "./object/component/button";
 @import "./object/component/checkbox";
 @import "./object/component/circle_button";
+@import "./object/component/errors";
 @import "./object/component/hand_write_button";
 @import "./object/component/link";
 @import "./object/component/outline_button";
