--- a/app/frontend/scss/foundation/_variables.scss
+++ b/app/frontend/scss/foundation/_variables.scss
@@ -1,14 +1,10 @@
 /*===============================
-
 	サイズ
-
 ================================*/
 $global_page_width: 1200px;
 
 /*===============================
-
 	カラー
-
 ================================*/
 
 /*
@@ -48,10 +44,9 @@ $general_line_color: #DDDDDD;
 $white_color: white;
 $black_color: black;
 $float_shadow_color: rgba(0, 0, 0, 0.15);
+
 /*===============================
-
 	余白
-
 ================================*/
 
 $spacers: (0: 0,
@@ -59,4 +54,16 @@ $spacers: (0: 0,
   2: .5rem,
   3: 1rem,
   4: 1.5rem,
-  5: 3rem)
+  5: 3rem);
+
+/*===============================
+	flexレイアウト用変数
+================================*/
+
+$flex-size-list: (dot-4: 0.4,
+  1: 1,
+  2: 2,
+  3: 3,
+  4: 4,
+  5: 5,
+  6: 6);
