--- a/app/frontend/scss/object/component/_badge.scss
+++ b/app/frontend/scss/object/component/_badge.scss
@@ -29,8 +29,8 @@
       content: "";
       top: 0;
       left: 100%;
-      border-top: .7rem solid transparent;
-      border-bottom: 1rem solid transparent;
+      border-top: .83rem solid transparent;
+      border-bottom: .83rem solid transparent;
       border-left: .5rem solid $sub_highlight_color;
     }
   }
