--- a/app/frontend/scss/object/project/_session_form_contents.scss
+++ b/app/frontend/scss/object/project/_session_form_contents.scss
@@ -1,8 +1,5 @@
-.p-session-form {
-  background: $white_color;
-  border: 1px solid $general_line_color;
-  border-radius: 3px;
-  padding: 1rem;
+.p-session-form-contents {
+  @include contents-box();
 
   &__header {
     text-align: center;
