--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -1,6 +1,10 @@
 // @import 'media/fonts/memoir-round-c63b435d0161341b85dd2b9262eef3ee.otf';
 @import '~bootstrap/scss/bootstrap';
 
+/*===============================
+	パッケージ
+================================*/
+
 @import "ress";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
@@ -9,20 +13,34 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "./actiontext";
 
-// foundation
+/*===============================
+	foundation
+================================*/
+
 @import "./foundation/variables";
-@import "./foundation/mixin/badge";
-@import "./foundation/mixin/button";
-@import "./foundation/mixin/content_box";
 @import "./foundation/reset";
 
-// layout
+/*
+	mixin
+================================*/
+
+@import "./foundation/mixin/badge";
+@import "./foundation/mixin/button";
+@import "./foundation/mixin/contents_box";
+
+/*===============================
+	layout
+================================*/
+
 @import "./layout/container";
 @import "./layout/footer";
 @import "./layout/header";
 @import "./layout/session";
 
-// component
+/*===============================
+	component
+================================*/
+
 @import "./object/component/badge";
 @import "./object/component/button";
 @import "./object/component/checkbox";
@@ -35,18 +53,28 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "./object/component/toy_btn";
 @import "./object/component/user_photo";
 
-// project
+/*===============================
+	project
+================================*/
+
 @import "./object/project/article_card";
-@import "./object/project/card_contents";
 @import "./object/project/comment_item";
 @import "./object/project/footer";
 @import "./object/project/header";
-@import "./object/project/list_contents";
-@import "./object/project/session_form_contents";
 @import "./object/project/sticky_menu";
+
+/*
+contents
+================================*/
+@import "./object/project/card_contents";
+@import "./object/project/session_form_contents";
+@import "./object/project/list_contents";
 @import "./object/project/user_profile_contents";
 
-// utility
+/*===============================
+	utility
+================================*/
+
 @import "./object/utility/flex_size";
 @import "./object/utility/float";
 @import "./object/utility/shadow";
