--- a/app/frontend/scss/foundation/mixin/_contents_box.scss
+++ b/app/frontend/scss/foundation/mixin/_contents_box.scss
@@ -4,3 +4,9 @@
   border-radius: 3px;
   padding: 1rem;
 }
+
+@mixin contents-header {
+  text-align: center;
+  border-bottom: 1px solid $general_line_color;
+  margin-bottom: 1rem;
+}
